// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Client File Generation > generates correctly with custom query client 1`] = `
"/**
 * Client Manager
 *
 * Auto-generated by @ic-reactor/codegen
 * 
 * This file is the central point for managing the Agent (authentication, host, etc.)
 */

import { ClientManager } from "@ic-reactor/react"
import { queryClient } from "../query-client"

export const clientManager = new ClientManager({ queryClient })
"
`;

exports[`Client File Generation > generates correctly with default host 1`] = `
"/**
 * Client Manager
 *
 * Auto-generated by @ic-reactor/codegen
 * 
 * This file is the central point for managing the Agent (authentication, host, etc.)
 */

import { ClientManager } from "@ic-reactor/react"
import { QueryClient } from "@tanstack/react-query"

const queryClient = new QueryClient()


export const clientManager = new ClientManager({ queryClient })
"
`;
